--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">[Our Name].AI</div>
+            <div class="logo">Health+ AI</div>
             <!--<ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
@@ -30,12 +30,13 @@
     <main>
         <section class="hero">
             <div class="content">
-                <h1>A healthy team is your greatest asset.</h1>
+                <h1>A healthy mind is your greatest asset.</h1>
                 <h2>
-                    Revolutionizing employee well-being support, our tool proactively manages burnout and stress, keeping your team healthy and engaged.</h2>
+                    Revolutionizing well-being support at your workplace, our tool proactively manages burnout and stress, optimizing your productivity and resilience.
+                </h2>
                 <p>
                 </p>
-                <p>Join us in shaping a future where work and wellness go hand in hand. Want to stay updated? Join our waitlist:</p>
+                <p>Join us in shaping a future where work and wellness go hand in hand. Want to try our AI solution allowing you to monitor your stress level on a daily basis and provide actionable steps? Join our waitlist:                </p>
                 <div class="search-container">
                     <input type="text" placeholder="Enter your email">
                     <button class="search-btn">Join the waitlist</button>
@@ -47,30 +48,30 @@
 
         <section class="mini-bg" style="border-top: 1px solid #c9bbad;">
             <div class="mini">
-                <h2>Features</h2>
+                <h2>What We Do</h2>
             </div>
         </section>
 
         <section class="features">
             <div class="feature-item">
                 <img src="data.png" alt="Seamless Integration">
-                <h3>Seamless Integration</h3>
-                <p>Easily sync with smartphones and wearables to monitor well-being indicators without interrupting the workflow.</p>
+                <h3>Proactive Stress Monitoring</h3>
+                <p>Our platform automatically syncs with your smartphones and wearables to monitor well-being indicators without interrupting your workflow.</p>
             </div>
             <div class="feature-item">
                 <img src="insights.png" alt="Real-Time Insights">
-                <h3>Real-Time Insights</h3>
-                <p>Our advanced analytics turn data into actionable insights, predicting stress and burnout before they happen.</p>
+                <h3>Personalized Health Awareness</h3>
+                <p>Our AI and digital phenotyping algorithms visualize your data in real time, monitoring stress and predicting burnout risk.</p>
             </div>
             <div class="feature-item">
                 <img src="actions.png" alt="Actionable Steps">
-                <h3>Actionable Steps</h3>
-                <p>Receive customized recommendations to improve performance and maintain mental health, tailored to each employee's data.</p>
+                <h3>Actionable Insights</h3>
+                <p>Receive customized insights to improve your performance and maintain mental health, tailored to your data.                </p>
             </div>
             <div class="feature-item">
                 <img src="wellness.png" alt="Holistic Well-Being">
-                <h3>Holistic Well-Being</h3>
-                <p>Promote a culture of health with strategies that encompass physical, emotional, and mental wellness for every team member.</p>
+                <h3>Wellbeing Resources</h3>
+                <p>Personalized breathing exercises, mindfulness writing, anonymized peer support group, clinical support, and workplace mental health resources.</p>
             </div>
         </section>
         <section class="mini-bg">
@@ -83,18 +84,19 @@
             <div class="steps-container">
                 <div class="step">
                     <img src="step1.png" alt="Collect Data">
-                    <h3>1. Collect Data</h3>
-                    <p>Leveraging private, encrypted, and secure methods, we integrate with smartphones and wearables to gather employee wellbeing data.</p>
+                    <h3>1. Data Collection & Privacy</h3>
+                    <p>We protect the privacy of your device data by leveraging proprietary encryption and secure data collection methods. When you use our platform, any information is not accessible to individual employers or specific people other than yourself.</p>
                 </div>
                 <div class="step">
                     <img src="step2.png" alt="Analyze">
-                    <h3>2. Analyze</h3>
-                    <p>Advanced AI algorithms analyze the data in real-time, identifying patterns indicative of stress or burnout.</p>
+                    <h3>2. Algorithmic Analysis </h3>
+                    <p>Based on behavioral data collected from your devices, our advanced AI and digital phenotyping algorithms focus on patterns and variations in daily activities such as phone usage, physical movements, and sleep quality, identifying deviations indicative of stress or burnout.                    </p>
                 </div>
                 <div class="step">
                     <img src="step3.png" alt="Actionable Insights">
-                    <h3>3. Actionable Insights</h3>
-                    <p>Receive tailored recommendations for each employee to improve well-being, performance, and mental health.</p>
+                    <h3>3. Insights & Resources</h3>
+                    <p>Our recommendations algorithm uses machine learning to provide personalized insights and resources on where, when, and how to improve your well-being, performance, and mental health. You can view your progress over time, building resilience and enhancing your ability to manage workplace stress.
+                    </p>
                 </div>
             </div>
         </section>
@@ -103,21 +105,27 @@
             <h2>Testimonials</h2>
             <div class="container">
                 <blockquote class="testimonial">
-                    <p>"This tool has transformed our workplace culture, drastically reducing stress levels and improving overall employee satisfaction."</p>
+                    <p>It's crucial that individuals have the opportunity to pause and self-reflect, to check in with themselves. My goal is to offer feedback that prompts this reflection asking them to consider whether their day was stressful or not, for instance. Imagine your phone alerting you, 'You're nearing your burnout limit today.' Such warnings, even if initially surprising to the recipient, can serve as valuable wake-up calls. Many might think, 'I hadn't realized I was pushing so close to my edge. I need to be more mindful. 'It's about bringing to light those unnoticed moments of near-overwhelm, encouraging a proactive approach to well-being.</p>
                     <footer>
-                        - Jane Doe, <cite>CEO of XYZ Corp</cite>
+                        - Jane Doe, <cite>MIT Research Scientist</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="testimonial">
-                    <p>"A must-have for any organization serious about employee wellness and performance. The insights provided are invaluable."</p>
+                    <p>"I tried it. It's fascinating and unbelievable how you can use AI to determine a person's mental health state. I like what you're doing. It's a real problem.</p>
                     <footer>
-                        - John Smith, <cite>Head of HR, Tech Innovations Ltd.</cite>
+                        - John Smith, <cite>Co-Founder and Managing Partner of Leading Healthcare VC</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="testimonial">
-                    <p>"Thanks to this platform, we've seen a significant improvement in team productivity and a decrease in burnout rates."</p>
+                    <p>"The notion that we could phenotype people with available passive and active data is not only valid but makes a lot of sense. The idea of being able to intervene in ways that people wouldn't otherwise allow, or share is kind of exciting. Breaking through in such a manner, encouraging people to engage and respond in ways they usually wouldn't, feels like uncovering the secret sauce. It's about getting past the internal and external stigmas of mental health, in a way that's both innovative and genuinely impactful."</p>
                     <footer>
-                        - Emily White, <cite>COO, Creative Solutions</cite>
+                        - Emily White, <cite>Chief Medical Officer, CVS MinuteClinics</cite>
+                    </footer>
+                </blockquote>
+                <blockquote class="testimonial">
+                    <p>"We want to integrate data insights to support the workforce management for organizations that want to do that; we do facilitate and encourage putting this data in the hands of the people who can take best advantage of it. There's an overlap where we could be helpful to one another. We're happy to help any way we can to facilitate your potential collaboration with hospitals in the Epic community."</p>
+                    <footer>
+                        - Emily White, <cite>Epic Systems</cite>
                     </footer>
                 </blockquote>
             </div>
@@ -125,8 +133,8 @@
 
         <section class="waitlist-section">
             <div class="waitlist-container">
-                <h2>Join Our Waitlist</h2>
-                <p>Be the first to experience the future of employee wellness. Sign up today and stay informed.</p>
+                <h2>Join our Waitlist!</h2>
+                <p>Be the first to try our cutting-edge workplace mental health solution. Join our waitlist now to unlock the power of monitoring and enhancing your mental wellbeing!</p>
                 <form class="waitlist-form">
                     <input type="email" placeholder="Enter your email" required>
                     <button type="submit">Subscribe</button>
