--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Our Name] AI</title>
+    <title>Health+ AI for Workplace Mental Health</title>
     <link rel="stylesheet" href="styles.css">
     <style>
     /* Reset some default styles */
