add waitlist functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>-->
             <div class="nav-buttons">
                 <!--<button class="login">Login</button>-->
-                <button class="create-account">Join the waitlist</button>
+                <a href="https://hf2t758joxj.typeform.com/to/p6GgZl9i" class="create-account">Join the waitlist</a>
             </div>
         </nav>
     </header>
@@ -36,10 +36,9 @@
                 </h2>
                 <p>
                 </p>
-                <p>Join us in shaping a future where work and wellness go hand in hand. Want to try our AI solution allowing you to monitor your stress level on a daily basis and provide actionable steps? Join our waitlist:                </p>
+                <p>Join us in shaping a future where work and wellness go hand in hand. Want to try our AI solution allowing you to monitor your stress level on a daily basis and provide actionable steps?</p><br/>
                 <div class="search-container">
-                    <input type="text" placeholder="Enter your email">
-                    <button class="search-btn">Join the waitlist</button>
+                    <a class="search-btn" href="https://hf2t758joxj.typeform.com/to/p6GgZl9i">Join the waitlist</a>
                 </div>
             </div>
             
@@ -103,29 +102,30 @@
 
         <section class="testimonials">
             <h2>Testimonials</h2>
+            <p style="padding: 0px 15%;">Our product has been met with positive feedback from key stakeholders we've engaged with, from hospital executives to research scientists. With their consent, selected quotes from our conversations are featured on our site. To respect privacy, all testimonials are presented anonymously.</p>
             <div class="container">
                 <blockquote class="testimonial">
                     <p>It's crucial that individuals have the opportunity to pause and self-reflect, to check in with themselves. My goal is to offer feedback that prompts this reflection asking them to consider whether their day was stressful or not, for instance. Imagine your phone alerting you, 'You're nearing your burnout limit today.' Such warnings, even if initially surprising to the recipient, can serve as valuable wake-up calls. Many might think, 'I hadn't realized I was pushing so close to my edge. I need to be more mindful. 'It's about bringing to light those unnoticed moments of near-overwhelm, encouraging a proactive approach to well-being.</p>
                     <footer>
-                        - Jane Doe, <cite>MIT Research Scientist</cite>
+                        - <cite>MIT Research Scientist</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="testimonial">
                     <p>"I tried it. It's fascinating and unbelievable how you can use AI to determine a person's mental health state. I like what you're doing. It's a real problem.</p>
                     <footer>
-                        - John Smith, <cite>Co-Founder and Managing Partner of Leading Healthcare VC</cite>
+                        - <cite>Co-Founder and Managing Partner of Leading Healthcare VC</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="testimonial">
                     <p>"The notion that we could phenotype people with available passive and active data is not only valid but makes a lot of sense. The idea of being able to intervene in ways that people wouldn't otherwise allow, or share is kind of exciting. Breaking through in such a manner, encouraging people to engage and respond in ways they usually wouldn't, feels like uncovering the secret sauce. It's about getting past the internal and external stigmas of mental health, in a way that's both innovative and genuinely impactful."</p>
                     <footer>
-                        - Emily White, <cite>Chief Medical Officer, CVS MinuteClinics</cite>
+                        - <cite>Chief Medical Officer, CVS MinuteClinics</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="testimonial">
                     <p>"We want to integrate data insights to support the workforce management for organizations that want to do that; we do facilitate and encourage putting this data in the hands of the people who can take best advantage of it. There's an overlap where we could be helpful to one another. We're happy to help any way we can to facilitate your potential collaboration with hospitals in the Epic community."</p>
                     <footer>
-                        - Emily White, <cite>Epic Systems</cite>
+                        - <cite>Epic Systems</cite>
                     </footer>
                 </blockquote>
             </div>
@@ -135,21 +135,18 @@
             <div class="waitlist-container">
                 <h2>Join our Waitlist!</h2>
                 <p>Be the first to try our cutting-edge workplace mental health solution. Join our waitlist now to unlock the power of monitoring and enhancing your mental wellbeing!</p>
-                <form class="waitlist-form">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">Subscribe</button>
-                </form>
+                <a class="search-btn" href="https://hf2t758joxj.typeform.com/to/p6GgZl9i">Subscribe</a><br/><br/>
             </div>
         </section>
 
         <footer class="site-footer">
             <div class="footer-top">
                 <div class="logo-area">
-                    <h2>LOGO</h2>
-                    <p>[our name].AI</p>
+                    <h2>Health+</h2>
+                    <p>A healthy mind is your greatest asset.</p>
                 </div>
                 <nav class="footer-nav">
-                    <ul>
+                    <!--<ul>
                         <li><h3>WELLNESS PLATFORM</h3></li>
                         <li>How It Works</li>
                         <li>Biometric Insights</li>
@@ -172,16 +169,16 @@
                         <li>About Us</li>
                         <li>Careers</li>
                         <li>Contact Support</li>
-                    </ul>
+                    </ul>-->
                 </nav>
                 
             </div>
             <div class="footer-bottom">
                 <div class="social-links">
                     <!-- Icons or text links for social media -->
-                    <a href="#">FB</a>
+                    <!--<a href="#">FB</a>
                     <a href="#">TW</a>
-                    <a href="#">IN</a>
+                    <a href="#">IN</a>-->
                 </div>
                 <div class="copyright">
                     © Copyright. All rights reserved.
