change waitlist link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            </ul>-->
            <div class="nav-buttons">
                <!--<button class="login">Login</button>-->
-               <a href="https://hf2t758joxj.typeform.com/to/p6GgZl9i" class="create-account">Join the waitlist</a>
+               <a href="https://forms.gle/dBChGhXwunvmfehu5" class="create-account">Join the waitlist</a>
            </div>
        </nav>
    </header>
@@ -39,7 +39,7 @@
                </p>
                <p>Join us in shaping a future where work and wellness go hand in hand. Want to try our AI solution allowing you to monitor your stress level on a daily basis and provide actionable steps?</p><br/>
                <div class="search-container">
-                   <a class="search-btn" href="https://hf2t758joxj.typeform.com/to/p6GgZl9i">Join the waitlist</a><br/>
+                   <a class="search-btn" href="https://forms.gle/dBChGhXwunvmfehu5">Join the waitlist</a><br/>
                </div>
            </div>
           
@@ -145,7 +145,7 @@
            <div class="waitlist-container">
                <h2>Join our Waitlist!</h2>
                <p>Be the first to try our cutting-edge workplace mental health solution. Join our waitlist now to unlock the power of monitoring and enhancing your mental wellbeing!</p>
-               <a class="search-btn" href="https://hf2t758joxj.typeform.com/to/p6GgZl9i">Subscribe</a><br/><br/>
+               <a class="search-btn" href="https://forms.gle/dBChGhXwunvmfehu5">Subscribe</a><br/><br/>
            </div>
        </section>
 
