replace index try 1

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </section>
 
     <section class="waitlist" style="margin: 0 !important;">
-        <h2>Join our Waitlist!</h2>
+        <h2>Join our waitlist!</h2>
         <p>Be the first to try our cutting-edge workplace mental health solution. Join our waitlist now to unlock the power of monitoring and enhancing your mental wellbeing!</p>
         <a href="https://forms.gle/dBChGhXwunvmfehu5" class="btn-primary" style="color: white !important;">Subscribe</a>
     </section>
